--- a/package.json
+++ b/package.json
@@ -70,5 +70,8 @@
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1"
+  },
+  "dependencies": {
+    "uuid": "^3.3.3"
   }
 }
