--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "versioned-storage",
-  "version": "1.0.2",
-  "description": "Local storage with versioning.",
+  "name": "browser-id",
+  "version": "1.0.0",
+  "description": "Unique ID for current browser (client).",
   "main": "index.js",
   "scripts": {
     "test": "jest src",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/CatChen/versioned-storage.git"
+    "url": "git+https://github.com/CatChen/browser-id.git"
   },
   "keywords": [
     "versioned",
@@ -19,9 +19,9 @@
   "author": "catchen",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/CatChen/versioned-storage/issues"
+    "url": "https://github.com/CatChen/browser-id/issues"
   },
-  "homepage": "https://github.com/CatChen/versioned-storage#readme",
+  "homepage": "https://github.com/CatChen/browser-id#readme",
   "prettier": {
     "singleQuote": true,
     "trailingComma": "all",
