Introduced TypeScript declaration

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.3",
   "description": "Unique ID for current browser (client).",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "jest src",
-    "build": "babel src -d lib --ignore '**/__tests__/**' && flow-copy-source -v -i '**/__tests__/**' src lib",
+    "build": "babel src -d lib --ignore '**/__tests__/**' && flow-copy-source -v -i '**/__tests__/**' src lib && tsc",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -69,10 +70,11 @@
     "husky": "^3.0.9",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
-    "pretty-quick": "^2.0.1"
+    "pretty-quick": "^2.0.1",
+    "typescript": "^3.7.2"
   },
   "dependencies": {
     "uuid": "^3.3.3",
-    "versioned-storage": "^1.0.6"
+    "versioned-storage": "^1.1.0"
   }
 }
