--- a/.mergify.yml
+++ b/.mergify.yml
@@ -3,7 +3,10 @@ pull_request_rules:
     conditions:
       - author=dependabot-preview[bot]
       - 'status-success=LGTM analysis: JavaScript'
-      - status-success=continuous-integration/travis-ci/pr
+      - status-success=Node.js CI / build (10.x) (pull_request)
+      - status-success=Node.js CI / build (12.x) (pull_request)
+      - status-success=Node.js CI / build (14.x) (pull_request)
+      - status-success=Node.js CI / build (15.x) (pull_request)
       - status-success=codecov/patch
     actions:
       merge:
@@ -13,7 +16,10 @@ pull_request_rules:
     conditions:
       - author=dependabot-preview[bot]
       - 'status-neutral=LGTM analysis: JavaScript'
-      - status-success=continuous-integration/travis-ci/pr
+      - status-success=Node.js CI / build (10.x) (pull_request)
+      - status-success=Node.js CI / build (12.x) (pull_request)
+      - status-success=Node.js CI / build (14.x) (pull_request)
+      - status-success=Node.js CI / build (15.x) (pull_request)
       - status-success=codecov/patch
     actions:
       merge:
