--- a/.mergify.yml
+++ b/.mergify.yml
@@ -3,10 +3,7 @@ pull_request_rules:
     conditions:
       - author=dependabot-preview[bot]
       - 'status-success=LGTM analysis: JavaScript'
-      - 'status-success=Node.js CI / build (10.x) (pull_request)'
-      - 'status-success=Node.js CI / build (12.x) (pull_request)'
-      - 'status-success=Node.js CI / build (14.x) (pull_request)'
-      - 'status-success=Node.js CI / build (15.x) (pull_request)'
+      - 'status-success=Node.js CI'
       - status-success=codecov/patch
     actions:
       merge:
@@ -16,10 +13,7 @@ pull_request_rules:
     conditions:
       - author=dependabot-preview[bot]
       - 'status-neutral=LGTM analysis: JavaScript'
-      - 'status-success=Node.js CI / build (10.x) (pull_request)'
-      - 'status-success=Node.js CI / build (12.x) (pull_request)'
-      - 'status-success=Node.js CI / build (14.x) (pull_request)'
-      - 'status-success=Node.js CI / build (15.x) (pull_request)'
+      - 'status-success=Node.js CI'
       - status-success=codecov/patch
     actions:
       merge:
