--- a/.mergify.yml
+++ b/.mergify.yml
@@ -3,7 +3,10 @@ pull_request_rules:
     conditions:
       - author=dependabot-preview[bot]
       - 'status-success=LGTM analysis: JavaScript'
-      - 'status-success=Node.js CI'
+      - status-success=build (10.x)
+      - status-success=build (12.x)
+      - status-success=build (14.x)
+      - status-success=build (15.x)
       - status-success=codecov/patch
     actions:
       merge:
@@ -13,7 +16,10 @@ pull_request_rules:
     conditions:
       - author=dependabot-preview[bot]
       - 'status-neutral=LGTM analysis: JavaScript'
-      - 'status-success=Node.js CI'
+      - status-success=build (10.x)
+      - status-success=build (12.x)
+      - status-success=build (14.x)
+      - status-success=build (15.x)
       - status-success=codecov/patch
     actions:
       merge:
