Fixed: Dependabot name in Mergify config

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,7 +1,7 @@
 pull_request_rules:
   - name: automatic merge for Dependabot pull requests (LGTM success)
     conditions:
-      - author=dependabot-preview[bot]
+      - author=dependabot[bot]
       - 'status-success=LGTM analysis: JavaScript'
       - status-success=build (10.x)
       - status-success=build (12.x)
@@ -15,7 +15,7 @@ pull_request_rules:
       delete_head_branch:
   - name: automatic merge for Dependabot pull requests (LGTM neutral)
     conditions:
-      - author=dependabot-preview[bot]
+      - author=dependabot[bot]
       - 'status-neutral=LGTM analysis: JavaScript'
       - status-success=build (10.x)
       - status-success=build (12.x)
