--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,4 +27,4 @@ jobs:
       - run: yarn install
       - run: yarn build
       - run: yarn flow
-      - run: yarn test src --coverage --collectCoverageFrom=src/** && yarn codecov -C
+      - run: yarn test src --coverage --collectCoverageFrom=src/**/*.js && yarn codecov -C
