--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -50,6 +50,7 @@ jobs:
           registry-url: https://npm.pkg.github.com
       - run: yarn install
       - run: yarn build
+      - run: yarn registry:github
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
