ci(Mergify): configuration update
Signed-off-by: Cat Chen <cathsfz@gmail.com>

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -8,6 +8,7 @@ pull_request_rules:
       - status-success=build (16.x)
       - status-success=build (18.x)
       - status-success=codecov/patch
+      - label!=accept2ship
     actions:
       merge:
         method: squash
@@ -21,6 +22,7 @@ pull_request_rules:
       - status-success=build (16.x)
       - status-success=build (18.x)
       - status-success=codecov/patch
+      - label!=accept2ship
     actions:
       merge:
         method: squash
