--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "registry:github": "cat package.json | json -e 'this.name = \"@CatChen/\" + this.name; this.publishConfig = {}; this.publishConfig.registry = \"https://npm.pkg.github.com/\"' > package.github.json && mv -f package.github.json package.json",
     "registry:npm": "cat package.json | json -e 'this.name = this.name.replace(new RegExp(\"^@CatChen/\"), \"\"); this.publishConfig = undefined' > package.npm.json && mv -f package.npm.json package.json",
     "prepublish": "npm run build",
-    "postinstall": "if [ \"$CI\"!='true' ]; then husky install; fi",
+    "postinstall": "printenv; if [ \"$CI\"!='true' ]; then echo 'true'; else echo 'false'; fi; husky install",
     "prepublishOnly": "pinst --disable",
     "postpublish": "pinst --enable"
   },
