--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,7 +15,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 12
+          node-version-file: '.nvmrc'
+          check-latest: true
       - run: yarn install
       - run: yarn build
       - run: yarn flow
@@ -28,7 +29,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 12
+          node-version-file: '.nvmrc'
+          check-latest: true
           registry-url: https://registry.npmjs.org/
       - run: yarn install
       - run: yarn build
@@ -46,7 +48,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 12
+          node-version-file: '.nvmrc'
+          check-latest: true
           registry-url: https://npm.pkg.github.com
       - run: yarn install
       - run: yarn build
