--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,6 +8,7 @@ on:
     branches: [master]
   pull_request:
     branches: [master, '[0-9]+-[0-9]+-*']
+  workflow_call:
 
 jobs:
   build:
@@ -28,3 +29,6 @@ jobs:
       - run: yarn build
       - run: yarn flow
       - run: yarn test src --coverage --collectCoverageFrom=src/**/*.js && yarn codecov -C
+        if: ${{ github.event_name == 'pull_request' }}
+      - run: yarn test src
+        if: ${{ github.event_name != 'pull_request' }}
