--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "browser-id",
   "version": "2.0.6",
   "description": "Unique ID for current browser (client).",
+  "funding": "https://github.com/CatChen/browser-id?sponsor=1",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
