--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -25,13 +25,15 @@ jobs:
           node-version-file: '.nvmrc'
           check-latest: true
           registry-url: https://registry.npmjs.org/
-      - run: yarn install
-      - run: yarn build
-      - run: npm config ls -l
-      - run: npm publish
-        env:
+      - env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          yarn install
+          yarn build
+          npm whoami
+          npm config ls -l
+          npm publish
 
   publish-github:
     runs-on: ubuntu-latest
@@ -47,10 +49,11 @@ jobs:
           node-version-file: '.nvmrc'
           check-latest: true
           registry-url: https://npm.pkg.github.com
-      - run: yarn install
-      - run: yarn build
-      - run: yarn registry:github
-      - run: npm config ls -l
-      - run: npm publish
-        env:
+      - env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          yarn install
+          yarn build
+          yarn registry:github
+          npm config ls -l
+          npm publish
