--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,9 @@ jobs:
     needs: [build, codeql]
     concurrency: release
     runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.release.outputs.tag }}
+      skipped: ${{ steps.release.outputs.skipped }}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -54,5 +57,8 @@ jobs:
 
   publish:
     needs: release
+    if: ${{ needs.release.outputs.diff != 'true' }}
     uses: ./.github/workflows/npm-publish.yml
     secrets: inherit
+    with:
+      tag: ${{ needs.release.outputs.tag }}
