--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,11 @@ on:
         required: true
         default: false
         type: boolean
+      skip-if-no-diff:
+        description: 'Skip if no diff'
+        required: true
+        default: false
+        type: boolean
 
 jobs:
   build:
@@ -54,6 +59,7 @@ jobs:
           release-type: ${{ inputs.release-type || 'patch' }}
           prerelease: ${{ inputs.prerelease || false }}
           dry-run: ${{ inputs.dry-run || false }}
+          skip-if-no-diff: ${{ inputs.skip-if-no-diff || true }}
 
   publish:
     needs: release
