Installed @serverless-guru/prettier-plugin-import-order; updated Prettier config

--- a/.npmignore
+++ b/.npmignore
@@ -19,8 +19,11 @@
 .babelrc
 .flowconfig
 .mergify.yml
+.nvmrc
 .github
 .husky
+.prettierignore
+.prettierrc.json
 
 npm-debug.log*
 yarn-debug.log*
