--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -11,6 +11,10 @@ on:
       tag:
         type: string
         required: false
+      dry-run:
+        type: boolean
+        default: false
+        required: false
   workflow_dispatch:
 
 jobs:
@@ -18,8 +22,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        if: ${{ !inputs.dry-run }}
         with:
           ref: ${{ inputs.tag }}
+      - uses: actions/checkout@v3
+        if: ${{ inputs.dry-run }}
+        with:
+          ref: ${{ github.ref_name || github.ref }}
       - uses: actions/setup-node@v3
         with:
           node-version-file: '.nvmrc'
@@ -28,12 +37,18 @@ jobs:
       - env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          DRY_RUN: ${{ inputs.dry-run || false }}
         run: |
           yarn install
           yarn build
           npm whoami
           npm config ls -l
-          npm publish
+          if [[ "$DRY_RUN" = true ]]
+          then
+            npm publish --dry-run
+          else
+            npm publish
+          fi
 
   publish-github:
     runs-on: ubuntu-latest
@@ -42,8 +57,13 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v3
+        if: ${{ !inputs.dry-run }}
         with:
           ref: ${{ inputs.tag }}
+      - uses: actions/checkout@v3
+        if: ${{ inputs.dry-run }}
+        with:
+          ref: ${{ github.ref_name || github.ref }}
       - uses: actions/setup-node@v3
         with:
           node-version-file: '.nvmrc'
@@ -51,9 +71,15 @@ jobs:
           registry-url: https://npm.pkg.github.com
       - env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DRY_RUN: ${{ inputs.dry-run || false }}
         run: |
           yarn install
           yarn build
           yarn registry:github
           npm config ls -l
-          npm publish
+          if [[ "$DRY_RUN" = true ]]
+          then
+            npm publish --dry-run
+          else
+            npm publish
+          fi
