--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,7 +14,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
         node-version: [18.x, 20.x, 22.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
@@ -22,14 +22,20 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+
       - run: yarn install
+
       - run: yarn build
+
       - run: yarn flow
+
       - run: yarn test src --coverage --collectCoverageFrom=src/**/*.js && yarn codecov -C
         if: ${{ github.event_name == 'pull_request' }}
+        
       - run: yarn test src
         if: ${{ github.event_name != 'pull_request' }}
