--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,8 +34,11 @@ jobs:
 
       - run: yarn flow
 
-      - run: yarn test src --coverage --collectCoverageFrom=src/**/*.js && yarn codecov -C
+      - run: yarn test src --coverage --collectCoverageFrom=src/**/*.js
         if: ${{ github.event_name == 'pull_request' }}
-        
+
       - run: yarn test src
         if: ${{ github.event_name != 'pull_request' }}
+
+      - uses: codecov/codecov-action@v5
+        if: ${{ github.event_name == 'pull_request' }}
