--- a/.flowconfig
+++ b/.flowconfig
@@ -1,5 +1,6 @@
 [ignore]
 <PROJECT_ROOT>/node_modules/jest-resolve/node_modules/resolve/test/resolver/malformed_package_json/
+<PROJECT_ROOT>/node_modules/resolve/test/resolver/malformed_package_json/package.json
 
 [include]
 
