--- a/.npmignore
+++ b/.npmignore
@@ -21,6 +21,7 @@
 .mergify.yml
 .nvmrc
 .github
+.vscode
 .husky
 .prettierignore
 .prettierrc.json
@@ -28,3 +29,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+deno.json
+deno.lock
+eslint.config.js
+jest.config.js
+babel.config.cjs
