--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@catchen/browser-id",
-  "version": "2.0.99",
+  "version": "3.0.0-0",
   "license": "MIT",
   "exports": "./src/browserID.ts",
   "compilerOptions": {
