--- a/deno.json
+++ b/deno.json
@@ -4,18 +4,31 @@
   "license": "MIT",
   "exports": "./src/browserID.ts",
   "compilerOptions": {
-    "lib": ["deno.window"]
+    "lib": [
+      "deno.window"
+    ]
   },
   "lint": {
-    "exclude": ["flow-typed/"]
+    "exclude": [
+      "flow-typed/"
+    ]
   },
   "fmt": {
     "singleQuote": true,
-    "include": ["src/"]
+    "include": [
+      "src/"
+    ]
   },
   "publish": {
-    "include": ["package.json", "src", "README.md", "LICENSE"],
-    "exclude": ["src/**/__tests__"]
+    "include": [
+      "package.json",
+      "src",
+      "README.md",
+      "LICENSE"
+    ],
+    "exclude": [
+      "src/**/__tests__"
+    ]
   },
   "imports": {
     "@catchen/versioned-storage": "jsr:@catchen/versioned-storage@^3.0.0"
