Enabled use-auto-merge for the ship workflow

--- a/.github/workflows/ship.yml
+++ b/.github/workflows/ship.yml
@@ -79,11 +79,12 @@ jobs:
         with:
           token: ${{ steps.get-github-app-token.outputs.token }}
 
-      - uses: CatChen/accept-to-ship-action@v0.6
+      - uses: CatChen/accept-to-ship-action@v0.7
         with:
           github-token: ${{ steps.get-github-app-token.outputs.token }}
           merge-method: squash
           timeout: 0
+          use-auto-merge: true
 
   pass-to-ship:
     needs: concurrency-group
@@ -109,10 +110,11 @@ jobs:
         with:
           token: ${{ steps.get-github-app-token.outputs.token }}
 
-      - uses: CatChen/accept-to-ship-action@v0.6
+      - uses: CatChen/accept-to-ship-action@v0.7
         with:
           github-token: ${{ steps.get-github-app-token.outputs.token }}
           merge-method: squash
           timeout: 0
           request-zero-accept-zero: true
           custom-hashtag: '#pass2ship'
+          use-auto-merge: true
