Made sure deno dependency in sync

--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -16,27 +16,38 @@ on:
   workflow_call:
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
-  test:
+  validate:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/create-github-app-token@v1
+        id: get-github-app-token
+        with:
+          app-id: ${{ secrets.CHECK_GIT_STATUS_BOT_APP_ID }}
+          private-key: ${{ secrets.CHECK_GIT_STATUS_BOT_APP_PRIVATE_KEY }}
 
-      - uses: denoland/setup-deno@v2
+      - uses: actions/checkout@v4
+        with:
+          token: ${{ steps.get-github-app-token.outputs.token }}
+
+      - name: Use Deno
+        uses: denoland/setup-deno@v2
         with:
           deno-version: latest
 
-      - run: |
+      - name: Modify source code for JSR dependency
+        run: |
           # Hack for switching from using NPM to JSR
           cat src/browserID.ts | sed "s/'versioned-storage'/'@catchen\\/versioned-storage'/g" > src/browserID.deno.ts
           mv -f src/browserID.deno.ts src/browserID.ts
 
       - run: deno install
 
-      - run: |
+      - name: Validate JSR dependency version with NPM dependency version
+        run: |
           # Hack for validating the same dependency version in package.json and deno.json
           NPM_SEMVER=$(cat package.json | yarn --silent json 'dependencies.versioned-storage')
           JSR_SERVER=$(cat deno.json | yarn --silent json 'imports.@catchen/versioned-storage' | sed -nE 's/jsr:@catchen\/versioned-storage@(.*)/\1/p')
@@ -50,7 +61,8 @@ jobs:
 
       - run: deno lint
 
-      - run: |
+      - name: Validate JSR package version with NPM package version
+        run: |
           NPM_VERSION=$(cat package.json | yarn --silent json 'version')
           JSR_VERSION=$(cat deno.json | yarn --silent json 'version')
           if [[ "$NPM_VERSION" != "$JSR_VERSION" ]]
@@ -58,3 +70,15 @@ jobs:
             echo "::error::Version mismatch between package.json ($NPM_VERSION) and deno.json ($JSR_VERSION)"
             exit 1
           fi
+
+      - name: Revert source code for NPM dependency
+        run: git checkout HEAD -- src/browserID.ts
+
+      - name: Push changes back to the Pull Request
+        uses: CatChen/check-git-status-action@v1
+        id: check-git-status
+        with:
+          fail-if-not-clean: ${{ github.actor != 'dependabot[bot]' || github.actor_id != 49699333 }}
+          push-if-not-clean: true
+          request-changes-if-not-clean: false
+          push-token: ${{ steps.get-github-app-token.outputs.token }}
