--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -18,6 +18,7 @@ on:
 
 jobs:
   publish-npm:
+    name: Publish to NPM
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -50,6 +51,7 @@ jobs:
           fi
 
   publish-github:
+    name: Publish to GitHub
     runs-on: ubuntu-latest
     permissions:
       contents: read
