--- a/.github/workflows/jsr-publish.yml
+++ b/.github/workflows/jsr-publish.yml
@@ -22,6 +22,14 @@ jobs:
     name: Publish to JSR
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/create-github-app-token@v1
+        id: get-github-app-token
+        with:
+          app-id: ${{ secrets.CHECK_GIT_STATUS_BOT_APP_ID }}
+          private-key: ${{ secrets.CHECK_GIT_STATUS_BOT_APP_PRIVATE_KEY }}
+      - uses: CatChen/config-git-with-token-action@v2
+        with:
+          github-token: ${{ steps.get-github-app-token.outputs.token }}
       - uses: actions/checkout@v4
         if: ${{ !inputs.dry-run }}
         with:
@@ -37,13 +45,14 @@ jobs:
           # Hack for switching from using NPM to JSR
           cat src/browserID.ts | sed "s/'versioned-storage'/'@catchen\\/versioned-storage'/g" > src/browserID.deno.ts
           mv -f src/browserID.deno.ts src/browserID.ts
+          git commit -am 'Switched to JSR'
       - env:
           DRY_RUN: ${{ inputs.dry-run || false }}
         run: |
           deno install
           if [[ "$DRY_RUN" = true ]]
           then
-            deno publish --allow-dirty --dry-run
+            deno publish --dry-run
           else
-            deno publish --allow-dirty
+            deno publish
           fi
