--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,7 @@ registries:
     type: npm-registry
     url: https://registry.npmjs.org
     token: '${{secrets.NPM_TOKEN}}'
-  npm-registry-npm-pkg-github-com-catchen:
+  npm-registry-npm-pkg-github-com-CatChen:
     type: npm-registry
     url: https://npm.pkg.github.com/CatChen
     token: '${{secrets.NPM_GITHUB_TOKEN}}'
@@ -20,10 +20,10 @@ updates:
       development-dependencies:
         dependency-type: 'development'
     assignees:
-      - catchen
+      - CatChen
     registries:
       - npm-npmjs
-      - npm-registry-npm-pkg-github-com-catchen
+      - npm-registry-npm-pkg-github-com-CatChen
     labels:
       - pass2ship
 
@@ -34,6 +34,6 @@ updates:
       time: '03:00'
       timezone: US/Pacific
     assignees:
-      - catchen
+      - CatChen
     labels:
       - pass2ship
