--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v4
         if: ${{ !inputs.dry-run }}
         with:
-          ref: ${{ inputs.tag }}
+          ref: ${{ inputs.tag || github.event.release.tag_name }}
       - uses: actions/checkout@v4
         if: ${{ inputs.dry-run }}
         with:
@@ -60,7 +60,7 @@ jobs:
       - uses: actions/checkout@v4
         if: ${{ !inputs.dry-run }}
         with:
-          ref: ${{ inputs.tag }}
+          ref: ${{ inputs.tag || github.event.release.tag_name }}
       - uses: actions/checkout@v4
         if: ${{ inputs.dry-run }}
         with:
