--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,8 +4,6 @@
 name: NPM Package
 
 on:
-  release:
-    types: [created]
   workflow_call:
     inputs:
       tag:
@@ -24,7 +22,7 @@ jobs:
       - uses: actions/checkout@v4
         if: ${{ !inputs.dry-run }}
         with:
-          ref: ${{ inputs.tag || github.event.release.tag_name }}
+          ref: ${{ inputs.tag }}
       - uses: actions/checkout@v4
         if: ${{ inputs.dry-run }}
         with:
@@ -60,7 +58,7 @@ jobs:
       - uses: actions/checkout@v4
         if: ${{ !inputs.dry-run }}
         with:
-          ref: ${{ inputs.tag || github.event.release.tag_name }}
+          ref: ${{ inputs.tag }}
       - uses: actions/checkout@v4
         if: ${{ inputs.dry-run }}
         with:
